[metadata]
name = import_adobe_analytics
version = 0.1.0
description = Load adobe analytics informations from the api
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/unnest/adobe-analytics-to-bigquery
author = UnNest data engineering team
maintainer = UnNest data engineering team
license = proprietary
platforms = any
project_urls =
    Source=https://github.com/unnest/adobe-analytics-to-bigquery

[options]
zip_safe = False
packages = find:
package_dir =
    =src/functions
include_package_data = True
install_requires =
    google-cloud-bigquery==3.5.0
    google-cloud-secret-manager==2.15.1
    pandas==1.5.3
    google-auth==2.16.0

python_requires = >=3.10

[options.packages.find]
where = src/functions

[options.extras_require]
testing =
    pytest>=6.0.0
    tox>=3.18.0